--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: La Argentina Manuscrita
 description: Descripcion breve del sitio
 baseurl: "/Textos-y-Mapas" # the subpath of your site, e.g. /blog
-url: "http://hdlab.space/" # the base hostname & protocol for your site
+url: "http://hdlab.space" # the base hostname & protocol for your site
 github_repo: Textos-y-Mapas # the GitHub repo name for your project
 twitter_username: HDCAICYT
 github_username:  hdcaicyt
