--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 title: La Argentina Manuscrita
-email: hdcaicyt@gmail.com
+email: hdlabconicet@gmail.com
 baseurl: "/La-Argentina-Manuscrita" # the subpath of your site, e.g. /blog
 url: "https://hdlab.space" # the base hostname & protocol for your site
 github_repo: La-Argentina-Manuscrita # the GitHub repo name for your project
-twitter_username: HDCAICYT
-github_username:  hdcaicyt
-facebook_username: HDCAICYTLAB
+twitter_username: hdlabconicet
+github_username:  hdlabconicet
+facebook_username: HDLAB.CONICET
 
 social_link: twitter
-social_username: hdcaicyt
+social_username: hdlabconicet
 
 theme_color: light
 
